# aso-ecg_network

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
logs/ecg_p_qrs_t/best_model/: events.out.tfevents.1707079379.thor-pc.221175.0  events.out.tfevents.1707302460.thor-pc.60316.0  hparams.yaml
logs/ecg_p_qrs_t/version_15/: events.out.tfevents.1706256882.DESKTOP-S1BL5FU.27412.0  hparams.yaml
logs/ecg_p_qrs_t/version_15/checkpoints/: epoch=99-step=6000.ckpt
logs/ecg_p_qrs_t/version_21/: events.out.tfevents.1706710280.thor-pc.407751.0
logs/ecg_p_qrs_t/version_21/checkpoints/: epoch=199-step=6000.ckpt
logs/ecg_p_qrs_t/version_22/: events.out.tfevents.1706713211.thor-pc.534872.0
logs/ecg_p_qrs_t/version_22/checkpoints/: epoch=199-step=6000.ckpt
logs/ecg_p_qrs_t/version_23/: events.out.tfevents.1706713653.thor-pc.661477.0
logs/ecg_p_qrs_t/version_24/: events.out.tfevents.1707063816.thor-pc.10388.0
logs/ecg_p_qrs_t/version_25/: hparams.yaml
logs/ecg_p_qrs_t/version_26/: events.out.tfevents.1707301930.thor-pc.42465.0
logs/ecg_p_qrs_t/version_7/: events.out.tfevents.1706209132.thor-pc.328166.0  hparams.yaml
logs/ecg_p_qrs_t/version_8/: events.out.tfevents.1706223260.thor-pc.2621.0
src/: __main__.py  config.yaml  main.py
src/Model/: ecg_datamodule.py  ecg_dataset.py  ecg_model.py  ecg_network.py
src/common/: config.py  data_classes.py  preprocessing.py  utils.py
src/model/: ecg_datamodule.py  ecg_model.py  ecg_model_inference.py  ecg_network.py
statistics/: jaccards.html
